argocd/apps/home-assistant/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
  externalTrafficPolicy: Local
