argocd/apps/home-assistant/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  hostnames:
    - ha.civilsnut.se
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
      - name: home-assistant
        port: 8123
      matches:
        - path:
            type: PathPrefix
            value: /
