argocd/apps/home-assistant/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: home-assistant
  labels:
    app: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-set-headers: "home-assistant/home-assistant-headers"
    nginx.ingress.kubernetes.io/websocket-services: "home-assistant"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$connection_upgrade"
spec:
  ingressClassName: nginx
  tls:
    - secretName: civilsnut-se-wildcard-tls
      hosts:
        - ha.civilsnut.se
  rules:
    - host: ha.civilsnut.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
